package exo2

class UrgentImpossibleException(msg : String) : Exception(msg)